Bug fixes with navigation on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -37,104 +37,6 @@ body a:hover{
   opacity: 1;
 }
 
-/*--terminal--*/
-.terminal-window {
-  text-align: left;
-  width: 600px;
-  height: 360px;
-  border-radius: 10px;
-  margin: auto;
-  position: relative;
-	margin-top: 30px;
-}
-
-.terminal-window header {
-  background: #E0E8F0;
-  height: 30px;
-  border-radius: 8px 8px 0 0;
-  padding-left: 10px;
-}
-
-.terminal-window header .ox-button {
-  width: 12px;
-  height: 12px;
-  margin: 10px 4px 0 0;
-  display: inline-block;
-  border-radius: 8px;
-}
-
-.terminal-name {
-  font-family: Menlo, Monaco, "Consolas", "Courier New", "Courier";
-  margin-left: 20px;
-  display: inline;
-  color: gray;
-  font-size: 11pt;
-}
-
-.terminal-window header .ox-button.green {
-  background: #3BB662;
-}
-
-.terminal-window header .ox-button.yellow {
-  background: #E5C30F;
-}
-
-.terminal-window header .ox-button.red {
-  background: #E75448;
-}
-
-.terminal-window section.terminal {
-  color: white;
-  font-family: Menlo, Monaco, "Consolas", "Courier New", "Courier";
-  font-size: 11pt;
-  background: #30353A;
-  padding: 10px;
-  box-sizing: border-box;
-  position: absolute;
-  width: 100%;
-  top: 30px;
-  bottom: 0;
-  overflow: auto;
-}
-
-.terminal-window section.terminal .typed-cursor {
-    opacity: 1;
-    -webkit-animation: blink 0.7s infinite;
-    -moz-animation: blink 0.7s infinite;
-    animation: blink 0.7s infinite;
-}
-@keyframes blink{
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-@-webkit-keyframes blink{
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-@-moz-keyframes blink{
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-
-.terminal-data { display: none; }
-.terminal-window .gray { color: gray; }
-.terminal-window .green { color: green;}
-.terminal-window .yellow { color: yellow;}
-.terminal-window .red { color: red;}
-
-.terminal-window a {
-  color: gray;
-  font-weight: bold;
-}
-
-.terminal-window a:hover {
-  text-decoration: none;
-}
-/*--terminal--*/
-
 /*--header-menu--*/
 button#showRightPush {
 	background: none;
@@ -221,8 +123,6 @@ a.boxclose{
 	right: 290px;
  }
 
-
-
 #activator { cursor: pointer;
 
 	 /*padding: 10px 35px 16px 0px; */
@@ -302,7 +202,7 @@ a.boxclose{
 /*--banner--*/
 .banner{
 
-	min-height:750px;
+	/*min-height:750px;*/
 	background-color: rgb(24, 168, 121);
 }
 
@@ -320,12 +220,16 @@ a.boxclose{
 width:80%;
 margin: 141px auto 0 auto;
 }
+
 .banner-right h1{
+	display: inline-block;
+  vertical-align: middle;
+  line-height: normal;
 	text-align: left;
-font-size:80px;
-font-weight:700;
-color:#ffffff;
-letter-spacing: 0px;
+	font-size:50px;
+	font-weight:700;
+	color:#ffffff;
+	letter-spacing: 0px;
 }
 .banner-right h2{
 	text-align: left;
@@ -355,17 +259,35 @@ border:2px solid #fff;
 .banner-right a:hover{
 border:2px solid #000;
 }
-.banner-left{
-float:left;
-}
+
 .banner-right{
 float:right;
+min-height: 269px;
 }
 .border {
   background: #52edc7;
   width: 70%;
   margin: 0 auto;
   padding: 1px;
+}
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
+.vcenter h1 {
+	font-size:50px;
+	font-weight:500;
+	color:#ffffff;
+	letter-spacing: 0px;
+}
+
+.vcenter h1 span{
+	font-size:50px;
+	font-weight:700;
+	font-style: italic;
+	color:#ffffff;
+	letter-spacing: 0px;
 }
 /*--//banner--*/
 /*-- menu --*/
@@ -2313,7 +2235,7 @@ border:none;
 	  min-height: 115px;
 	}
 	.banner {
-	  min-height: 659px;
+	  /*min-height: 659px;*/
 	}
 	.about-back {
 	  min-height: 92px;
@@ -2508,7 +2430,7 @@ border:none;
 	  padding: 12px 20px;
 	}
 	.banner {
-	  min-height: 575px;
+	  /*min-height: 575px;*/
 	}
 	.about h3 {
 	  font-size: 32px;
@@ -2898,7 +2820,7 @@ border:none;
 	  margin: 80px auto 0 auto;
 	}
 	.banner {
-	  min-height: 467px;
+	  /*min-height: 467px;*/
 	}
 	.banner-right h1 {
 	  font-size: 28px;
@@ -3316,7 +3238,7 @@ border:none;
 	  margin: 60px auto 0 auto;
 	}
 	.banner {
-	  min-height: 393px;
+	  /*min-height: 393px;*/
 	}
 	.about-back {
 	  min-height: 39px;
@@ -3634,7 +3556,7 @@ border:none;
 	  margin: 10px 0 28px 0;
 	}
 	.banner {
-	  min-height: 352px;
+	  /*min-height: 352px;*/
 	}
 	.about h3 {
 	  letter-spacing: 11px;
@@ -3748,10 +3670,16 @@ border:none;
 	  top: 30%;
 	  left: 42%;
 	}
-	.work-info h3,.ser-info h3,.gallery-section h3,.process h3,.testimonials h3 ,.blog-info h3,.contact-info h3,.sam-head h3{
+	.work-info h3,.ser-info h3,.process h3,.testimonials h3 ,.blog-info h3,.contact-info h3,.sam-head h3{
 	  font-size: 28px;
 		letter-spacing: 11px;
 		margin: 0;
+	}
+	.gallery-section h3 {
+		font-size: 28px;
+		letter-spacing: 11px;
+		margin: 0;
+		padding-top: 50px;
 	}
 	.w-grid {
 	  float: left;
@@ -4054,7 +3982,7 @@ border:none;
   margin: 38px auto 0 auto;
 }
 .banner {
-  min-height: 231px;
+  /*min-height: 231px;*/
 }
 .about-back {
   min-height: 19px;
